<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtAboutTargetLocation"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/txtViewPostLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtLocation"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextPostLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/txtLocation"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/txtViewPostCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtCity"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextPostCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/txtCity"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:minHeight="48dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewPostCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtCountry"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinnerPostCountry"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/countries_array"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewPostPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtPostalCode"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPostPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtPostalCode"
                android:inputType="textNoSuggestions"
                android:minHeight="48dp"
                android:autofillHints="postalAddress" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtAboutPerson"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/txtViewPostInitiatorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtInitiatorName"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextPostInitiatorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/txtInitiatorName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewPostInitiatorGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtInitiatorGender"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinnerPostInitiatorGender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/gender"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewPostInitiatorAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtInitiatorAge"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPostInitiatorAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtInitiatorGender"
                android:importantForAutofill="no"
                android:inputType="text|number"
                android:minHeight="48dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtViewPostInitiatorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtInitiatorDesc"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextPostInitiatorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtInitiatorDescHint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/txtViewInitiatorImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtInitiatorImage"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewPostInitiatorImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:contentDescription="@string/txtInitiatorImage"
            android:foreground="@android:drawable/ic_menu_edit"
            android:foregroundGravity="bottom|right"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_outline_image_24" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Button
        android:id="@+id/btnSavePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCreatePost" />

    <Button
        android:id="@+id/btnCancelPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_dark_onError"
        android:text="@string/txtCancelPost"
        android:visibility="gone" />
</LinearLayout>