<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgViewEditProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:foreground="@android:drawable/ic_menu_edit"
                android:foregroundGravity="bottom|right"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_outline_account_circle_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtUserName"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/editTextDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtUserName"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtEmail"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/txtEmail"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtCity"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtCity"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Name" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtCountry"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />


        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/countries_array"
            android:spinnerMode="dialog" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSaveProfile" />

    </LinearLayout>
</ScrollView>