<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgViewProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center|top"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_outline_account_circle_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_edit"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:text="@string/txtUserName"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtViewDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Nelson" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:text="@string/txtEmail"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="nelson@email.com" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:text="@string/txtPassword"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:password="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="password" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:text="@string/txtCity"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtViewCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Vancouver" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:text="@string/txtCountry"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtViewCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Canada" />

        <Button
            android:id="@+id/btnSignOut"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/txtSignOut" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    </LinearLayout>
</ScrollView>